Added css style

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             name="confirm_password"
           />
         </div>
-        <button type="submit">Register</button>
+        <div class="form-group">
+          <button type="submit">Register</button>
+        </div>
       </form>
     </div>
   </body>
